# toon-rust

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO_REFACTOR.md  audit_progress.md  build-output-final.txt  build-output-fixed.txt  build-output-pattern-matching.txt  build-output.txt  build.rs  e8_adjacency.csv  e8_roots.csv  e8_roots.json  final-clippy-output.txt  index.html  migration_task_progress.md  phase1-build-output.txt  phase1-findings.md  publication_audit_todo.md  rune-gate-ui-fix-todo.md  rustfmt.toml  toon-rune.code-workspace
.github/: 0-Rust  CODEOWNERS  Luna.md  PULL_REQUEST_TEMPLATE.md
.toon-runeFiles/: rune-xero.txt  toon-rune.txt
ams/: .gitignore  Cargo.toml  README.md
ams/.cargo/: config.toml
ams/.github/: 0-Rust
ams/.github/workflows/: ci.yml
ams/crates/acritic/: Cargo.toml  README.md
ams/crates/acritic/benches/: mod.rs
ams/crates/acritic/src/: benchmarks.rs  final.rs  lib.rs  main.rs  ml_workloads.rs  performance_analysis.rs  report_generator.rs  test_harness.rs
ams/crates/acritic/tests/: mod.rs
ams/crates/ams-gate/: Cargo.toml  LICENSE  README.md
ams/crates/ams-gate/src/: lib.rs  nats.rs
ams/crates/geoshi/: Cargo.toml  README.md  build.rs
ams/crates/geoshi/benches/: cuda_kernels.rs  perf.rs
ams/crates/geoshi/examples/: test_cuda.rs  test_scanner.rs
ams/crates/geoshi/kernels/: mgsk.cu
ams/crates/geoshi/src/: actuator.rs  articulator.rs  autofix.rs  diffuser.rs  georganism.rs  geosynth.rs  hex.rs  hydron.rs  lattice.rs  lib.rs  projector.rs  worm.rs  xage.rs
ams/crates/geoshi/src/geocode/: agnostic.rs  kdtree.rs  mod.rs  rust.rs  scanner.rs
ams/crates/geoshi/src/kernels/: mod.rs
ams/crates/geoshi/tests/: mod.rs
ams/crates/gf8/: Cargo.toml  E8X_BATTERIES_INCLUDED.md  S8N Universal Lossless Compression - Tec.md
ams/crates/gf8/.gf8Files/: gf8.txt
ams/crates/gf8/benches/: fractal_vs_linear.rs  perf.rs  perf_integrations.rs
ams/crates/gf8/src/: aligned.rs  compute.rs  e32l.rs  e8f.rs  e8x.rs  fast_math.rs  fractal_simt.rs  generative.rs  gf8.rs  intrinsic_backend.rs  intrinsics.rs  lib.rs  progen_reactor.rs  quantize.rs  resonance_router.rs  simd.rs  topology.rs
ams/crates/gf8/src/.srcFiles/: src.txt
ams/crates/gf8/src/bitcodec/: lossless.rs  lossy.rs  mod.rs
ams/crates/gf8/src/math/: gf8_ops.rs  lattice.rs  mod.rs  rotation.rs
ams/crates/xuid/: Cargo.toml  README.md
ams/crates/xuid/.xuidFiles/: XyCo.md  XyCo2.txt
ams/crates/xuid/src/: binary.rs  bug.rs  construct.rs  core.rs  e8_lattice.rs  error.rs  lens.rs  lestrat.rs  lib.rs  lightweight.rs  qdrant.rs
ams/crates/yoshi/: Cargo.toml  LICENSE  README.md
ams/crates/yoshi-derive/: Cargo.toml  README.md
ams/crates/yoshi-derive/src/: lib.rs
ams/crates/yoshi-std/: Cargo.toml  README.md
ams/crates/yoshi-std/.yoshi/: metrics.csv
ams/crates/yoshi-std/src/: lib.rs
ams/crates/yoshi/benches/: perf.rs
ams/crates/yoshi/src/: agent.rs  error.rs  lib.rs  main.rs  migrator.rs
ams/scripts/: build_cuda_kernels.ps1  build_cuda_kernels.sh  clippy.ps1  crate_usage_report.py  lint-markdown.ps1  migrate.py
benches/: encode_decode.rs  fory_hydron.rs  fory_ops.rs  hydron_geometry.rs  rune_operators.rs  rune_parser.rs  rune_vs_toon.rs  serde_hydron.rs
docs/: CLI.md  Hydron.md  SEMANTIC_PREFIXES.md  TUI.md  serialization_benchmarks.md
examples/: arrays.rs  arrays_of_arrays.rs  cli_usage.sh  decode_strict.rs  delimiters.rs  dynamic_glyphs.rune  empty_and_root.rs  hex.rune  hex.rune.bak  hex.rune.full  hex.rune.full.txt  hex_test.rune  hydron.rune  main.rs  mixed_arrays.rs  objects.rs  round_trip.rs  rune_advanced_concepts.rs  rune_arithmetics.rs  rune_basic.rs  rune_geometry.rune  rune_ml_embeddings.rune  rune_operators.rs  structs.rs  tabular.rs  test_hydron_compute.rune  test_rune_compute.rune  test_types.rune
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode.rs  encode.rs
hydron-core/: Cargo.toml  README.md
hydron-core/src/: fisher.rs  gf8.rs  hyperbolic.rs  intrinsics.rs  lib.rs  lorentzian.rs  quaternion.rs  spherical.rs  symplectic.rs  topological.rs
hydron-ffi/: Cargo.toml  README.md
hydron-ffi/src/: lib.rs
hydron-ffi/www/: index.html
rune-cros/: Cargo.toml  README.md
rune-cros/src/: arow.rs  json.rs  lib.rs  mpak.rs  npy.rs  prqt.rs  toml.rs  yaml.rs
rune-cros/tests/: json_roundtrip.rs  mpak_roundtrip.rs  npy_roundtrip_enabled.rs  optional_disabled.rs  toml_roundtrip.rs  yaml_roundtrip.rs
rune-curs/: Cargo.toml
rune-ext/: Cargo.toml
rune-ext/src/: docs.rs  lib.rs  mermaid.rs
rune-gate/: Cargo.toml
rune-gate/.rune-gateFiles/: rune-gate.txt
rune-gate/src/: app.rs  bridge.rs  lib.rs  main.rs  scene.rs  ui.rs
rune-gsv/: Cargo.toml
rune-gsv/.rune-gsvFiles/: rune-gsv.txt
rune-gsv/docs/: ARCHITECTURE.md
rune-gsv/examples/: simple_store.rs
rune-gsv/src/: XV-Relay.md  addressing.rs  builtins.rs  lib.rs  persistence.rs  query.rs  slot.rs  store.rs
rune-gsv/tests/: store_tests.rs
rune-hex/: Cargo.toml
rune-mira/: Cargo.toml
rune-xyco/: Cargo.toml  data.rune
rune-xyco/src/: NALYD.txt  codex.rs  e8.rs  lib.rs  operators.rs  registry.rs
rune-zero/: Cargo.toml
rune-zuno/: Cargo.toml
rune-zuno/src/: lib.rs  parser copy.rs  renderer.rs
rune-zuno/src/hydron/: cuda.rs  eval.rs  mod.rs  values.rs
rune-zuno/src/parts/: mod.rs
rune-zuno/src/rune/: grammar.pest  mod.rs  parser.rs
rune-zuno/src/rune/parts/: delimiters.rs  mixed_arrays.rs
rune-zuno/src/tests/: archetype_integration.rs
rune-zuno/tests/: roundtrip.rs
scripts/: XyCo.md  XyCo2.txt  mapper.py  normalize_md.py  refactor_hex_rune_coords.py
src/: constants.rs  lib.rs  serde.rs  utf8_sanitize.rs
tests/: array_literals.rs  arrays.rs  asv_builtin_integration.rs  boundary.rs  decode_helpers.rs  delimiters.rs  encode_helpers.rs  error_context.rs  errors.rs  numeric.rs  objects.rs  options.rs  panic_safety.rs  parentheses.rs  parser_errors.rs  real_world.rs  round_trip.rs  rune.rs  scanner_errors.rs  semantic_prefixes.rs  serde_api.rs  spec_edge_cases.rs  spec_fixtures.rs  strict_mode.rs  token_benchmark.rs  (+2 more)
(+136 files in other folders)
