[workspace]
members = [".", "hydron-core", "hydron-ffi", "rune-curs", "rune-hex", "rune-gsv", "rune-gate", "rune-cros"]
resolver = "2"

[workspace.dependencies]
 
yoshi = { path = "X:/_Repos/ams/crates/yoshi" }
yoshi-std = { path = "X:/_Repos/ams/crates/yoshi-std" }
yoshi-derive = { path = "X:/_Repos/ams/crates/yoshi-derive" }

[package]
name = "rune-format"
version = "0.0.1"
edition = "2024"
authors = ["Lord Xyn <LordXyn@proton.me",]
license = "MIT OR Apache-2.0"
description = "Root Universal Notation Encoding (RUNE) - geometric control language with E8 lattice mathematics and Token-Oriented Object Notation (TOON) serialization"
repository = "https://github.com/arcmoonstudios/rune-format"
documentation = "https://docs.rs/rune-format"
keywords = ["rune", "geometry", "e8", "toon", "serialization"]
categories = ["mathematics", "encoding", "parser-implementations", "science"]
readme = "README.md"

[features]
default = []
fory = ["dep:fory", "dep:fory-core", "hydron-core?/fory"]
hydron = ["hydron-core"]  # Geometry Math Engine for RUNE (depends on hydron-core crate)
simd = ["hydron", "hydron-core/simd"]  # SIMD acceleration for Gf8 operations (enables hydron-core simd)
cuda = ["cust", "rune-curs"]
gsv = ["rune-gsv"]
tui = []  # Terminal User Interface

[[example]]
name = "examples"
path = "examples/main.rs"

[[bin]]
name = "rune"
path = "src/cli/main.rs"

[[bin]]
name = "san"
path = "src/utils/san.rs"

[dependencies]
hydron-core = { path = "./hydron-core", optional = true, features = ["serde", "fory"] }
rune-curs = { path = "./rune-curs", optional = true }
rune-hex = { path = "./rune-hex" }
rune-gsv = { path = "./rune-gsv", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
indexmap = "2.12.1"
serde_json = { version = "1.0.145", features = ["preserve_order"] }
cust = { version = "0.3.2", optional = true }
# Yoshi error stack (workspace paths).
yoshi = { workspace = true }
yoshi-std = { workspace = true }
yoshi-derive = { workspace = true }

# RUNE-specific dependencies
pest = "2.8.4"
pest_derive = "2.8.4"

clap = { version = "4.5.11", features = ["derive"] }
tiktoken-rs = "0.9.1"
comfy-table = "7.2.1"
rayon = "1.10.0" # Added for parallel iterators
thiserror = "1.0.61" # Added for custom error types and attributes
itoa = "1.0.11" # Added for efficient integer to ASCII conversion
simd-json = "0.13.1" # Added for zero-copy, SIMD-accelerated JSON parsing

# TUI dependencies
ratatui = "0.29"
crossterm = "0.29"
tui-textarea = "0.7"
arboard = "3.6.1"
syntect = "5.3.0"
unicode-width = "0.2"
chrono = "0.4"
fory = { version = "0.13.2", optional = true }
fory-core = { version = "0.13.2", optional = true }

[dev-dependencies]
glob = "0.3.3"
criterion = { version = "0.8.1", features = ["html_reports"] }
tempfile = "3.5"

[build-dependencies]
ptx-builder = { version = "0.5.3", optional = true }

[[bench]]
name = "rune_parser"
harness = false

[[bench]]
name = "rune_operators"
harness = false

[[bench]]
name = "rune_vs_toon"
harness = false

[[bench]]
name = "hydron_geometry"
harness = false
required-features = ["hydron"]

[[bench]]
name = "fory_ops"
harness = false
required-features = ["fory"]

[[bench]]
name = "serde_hydron"
harness = false
required-features = ["hydron"]

[[bench]]
name = "fory_hydron"
harness = false
required-features = ["fory", "hydron", "simd"]

[profile.dev]
lto = "thin"
opt-level = 3
incremental = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.bench]
opt-level = 3
lto = false
codegen-units = 1
