[package]
name = "toon-format"
version = "0.4.1"
edition = "2021"
authors = [
    "Johann Schopplich <hello@johannschopplich.com>",
    "Shreyas K S <ks.shreyas0@gmail.com>",
]
license = "MIT"
description = "Token-Oriented Object Notation (TOON) - a token-efficient JSON alternative for LLM prompts"
repository = "https://github.com/toon-format/toon-rust"
homepage = "https://toonformat.dev"
documentation = "https://docs.rs/toon-format"
keywords = ["toon", "format", "llm", "token", "serialization"]
categories = ["encoding", "parser-implementations"]
readme = "README.md"

[[example]]
name = "examples"
path = "examples/main.rs"

[[bin]]
name = "toon"
path = "src/cli/main.rs"
required-features = ["cli"]

[features]
default = ["cli", "cli-stats", "tui", "tui-clipboard", "tui-time", "parallel"]
cli = ["dep:clap", "dep:anyhow"]
cli-stats = ["cli", "dep:tiktoken-rs", "dep:comfy-table"]
tui = ["dep:anyhow", "dep:ratatui", "dep:crossterm", "dep:tui-textarea"]
tui-clipboard = ["tui", "dep:arboard"]
tui-time = ["tui", "dep:chrono"]
parallel = []

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
indexmap = "2.0"
serde_json = { version = "1.0.145", features = ["preserve_order"] }
thiserror = "2.0.17"

# CLI dependencies (gated behind "cli"/"cli-stats" features)
clap = { version = "4.5.11", features = ["derive"], optional = true }
anyhow = { version = "1.0.86", optional = true }
tiktoken-rs = { version = "0.9.1", optional = true }
comfy-table = { version = "7.1", optional = true }

# TUI dependencies (gated behind "tui" feature)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
tui-textarea = { version = "0.7", optional = true }
arboard = { version = "3.4", optional = true }
chrono = { version = "0.4", optional = true }

[dev-dependencies]
datatest-stable = "0.3.3"
glob = "0.3"

[[test]]
name = "spec_fixtures"
harness = false
