[workspace]
resolver = "2"
members = ["crates/acritic", "crates/geoshi", "crates/yoshi", "crates/yoshi-derive", "crates/yoshi-std", "crates/xuid", "crates/ams-gate", "crates/gf8"]
default-members = ["crates/acritic", "crates/geoshi", "crates/yoshi", "crates/yoshi-derive", "crates/yoshi-std", "crates/xuid", "crates/ams-gate", "crates/gf8"]

[workspace.package]
authors = ["Lord Xyn <LordXyn@proton.me>"]
license = "MIT OR Apache-2.0"
rust-version = "1.89"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/arcmoonstudios/ams"
readme = "README.md"
keywords = ["arcmoon", "arcmoonstudios", "geoshi", "yoshi", "xuid", "rust", "geospatial"]
categories = ["algorithmics", "data-structures"]
description = "ArcMoon Suite is a collection of Rust crates designed to provide robust solutions for geospatial analysis, performance, and testing utilities, supported by a fault-tolerant framework(Yoshi). It includes libraries for geospatial algorithms (Geoshi), a unique identifier system (XUID), and a versatile runtime environment (Gate)."
[workspace.dependencies]
acritic = { path = "./crates/acritic" }
yoshi-derive = { path = "./crates/yoshi-derive" }
yoshi-std = { path = "./crates/yoshi-std" }
geoshi = { path = "./crates/geoshi" }
gf8 = { path = "./crates/gf8" }
yoshi = { path = "./crates/yoshi" }
xuid = { path = "./crates/xuid" }
ahash = "0.8.11"
blake3 = "1.3"
dashmap = "6.1.0"
proc-macro2 = { version = "1.0.103", features = ["span-locations"] }
parity-scale-codec = { version = "3.7", features = ["derive"] }
num_cpus = { version = "1.16", default-features = false }
ed25519-dalek = { version = "2.1", features = ["std"] }
getrandom = { version = "0.3.4", features = ["std"] }
reqwest = { version = "0.12.25", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.48", features = ["full"] }
tracing-subscriber = "0.3.22"
qdrant-client = "1.16.0"
fory-derive = "0.13.2"
fory-core = "0.13.2"
fory = "0.13.2"
hex = "0.4.3"
rand = "0.9.2"
futures = "0.3"
lz4_flex = "0.12"
nalgebra = "0.34.1"
once_cell = "1.20"
parking_lot = "0.12"
async-nats = "0.45.0"
serde_json = "1.0.145"
smallvec = "1.13"
snap = "1.1.1"
quote = "1.0"
syn = "2.0.111"
toml_edit = "0.23.9"
sysinfo = "0.37.2"
tracing = "0.1.43"
zstd = "0.13.3"
hostname = "0.4"
async-trait = "0.1"
criterion = "0.8.1"
tokio-test = "0.4"
rayon = "1.7"
clap = "4.5.52"
statistical = "1.0"
plotters = "0.3"
tempfile = "3.10"
regex = "1.12"
toml = "0.9.8"
csv = "1.4.0"
url = "2.5"
proptest = "1.4"
[profile.release]
codegen-units = 1
panic = "abort"
opt-level = 3
lto = "fat"
strip = true
debug = false
overflow-checks = false
incremental = false
[profile.dev]
opt-level = 1
incremental = true
debug = true
overflow-checks = true
[profile.bench]
codegen-units = 1
opt-level = 3
lto = "fat"
debug = false
