[package]
name = "toon-format-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
toon-format = { path = ".." }
arbitrary = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "fuzz_decode"
path = "fuzz_targets/decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_encode"
path = "fuzz_targets/encode.rs"
test = false
doc = false
bench = false
