[package]
name = "rune-cros"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
rune-format = { path = ".." }
serde_json = "1.0.145"
yoshi = { workspace = true }
# rune-format as a dependency for RUNE encode/decode
# rune-format = { path = ".." }

# Optional format features
serde_yaml_ng = { version = "0.10.0", optional = true }
toml = { version = "0.9.8", optional = true }
rmp-serde = { version = "1.1", optional = true }
arrow2 = { version = "0.17.4", optional = true }
parquet2 = { version = "0.17.2", optional = true }
ndarray = { version = "0.17.1", optional = true }
npy = { version = "0.4", optional = true }

[features]
default = []
yaml = ["dep:serde_yaml_ng"]
toml = ["dep:toml"]
mpak = ["dep:rmp-serde"]
arow = ["dep:arrow2"]
prqt = ["dep:parquet2"]
npy = ["dep:ndarray", "dep:npy"]

[lib]
name = "rune_cros"
path = "src/lib.rs"
doctest = false
