[package]
name = "rune-xyco"
version = "0.1.0"
edition = "2024"
description = "Xypher Codex (XYCO) - Deterministic E8 Semantic Hypergraph"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
dirs = "4.0"
once_cell = "1.20"
yoshi = { workspace = true }
yoshi-std = { workspace = true }
yoshi-derive = { workspace = true }

[features]
default = []
hydron = []

[lib]
name = "rune_xyco"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3.5"

 

