[package]
name = "rune-zuno"
version = "0.1.0"
edition = "2024"

[dependencies]
nom = "7"
yoshi = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
pest = "2.8.4"
pest_derive = "2.8.4"
yoshi-derive = { workspace = true }
fory = { version = "0.13.2", optional = true }
hydron-core = { path = "../hydron-core", optional = true, features = ["serde", "fory"] }

[features]
default = []
hydron = ["hydron-core"]
fory = ["dep:fory", "hydron-core?/fory"]

[lib]
doctest = false
