[package]
name         = "geoshi"
version      = { workspace = true }
edition      = { workspace = true }
authors      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }
description  = "GeoSynthion Agent for advanced spatial algorithms and data structures."
repository = "https://github.com/arcmoon/arcmoon-suite"
readme = "README.md"
keywords = ["geoshi", "geosynth", "geometry", "arcmoon"]
categories = ["algorithmics", "data-structures"]

[features]
default = ["gpu", "scan-rs"]
gpu = []
scan-rs = ["syn"]
cuda = ["cust"]

[dependencies]
ndarray = { version = "0.16.1", features = ["approx"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.48.0", features = ["full"] }
thiserror = "2.0.17"
itertools = "0.14.0"
lazy_static = "1.4"
approx = "0.5.1"
wgpu = "27.0.1"
tracing = { workspace = true }
cargo_metadata = "0.23.1"
syn = { version = "2.0.111", features = ["full"], optional = true }
cust = { version = "0.3.2", optional = true }
xuid = { path = "../xuid" }

[build-dependencies]
which = "8.0.0"

[dev-dependencies]
criterion = "0.8.1"
tempfile = { workspace = true }

[[bench]]
name = "perf"
harness = false
path = "benches/perf.rs"

[[bench]]
name = "cuda_kernels"
harness = false
path = "benches/cuda_kernels.rs"
required-features = ["cuda"]

[package.metadata.cargo-machete]
ignored = ["which"]
