# yoshi/Cargo.toml

[package]
name         = "yoshi"
version      = { workspace = true }
edition      = { workspace = true }
authors      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }
description  = "Yoshi - unified facade for thematic error handling, ML recovery, and supervision."
repository = "https://github.com/arcmoon/arcmoon-suite"
readme = "README.md"
keywords = ["yoshi", "error-handling", "ml", "supervision", "arcmoon"]
categories = ["command-line-utilities", "libraries"]

[dependencies]
# Core ecosystem crates (local workspace members)
yoshi-std = { workspace = true }
yoshi-derive = { workspace = true }
xuid = { workspace = true }
geoshi = { path = "../geoshi", optional = true }

# Telemetry / logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Async runtime (used for background ML recovery tasks)
tokio = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

# Error / data handling
serde = { workspace = true }
serde_json = { workspace = true }
cargo_metadata = { version = "0.23.1", optional = true }

# CLI and TUI dependencies (gated by features)
clap = { workspace = true, features = ["derive", "env"], optional = true }
ratatui = { version = "0.29.0", features = ["all-widgets"], optional = true }
ratatui-image = { version = "8.0.2", default-features = false, features = ["crossterm"], optional = true }
crossterm = { version = "0.29.0", optional = true }
rand = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
image = { version = "0.25", optional = true }

# Optional ecosystem integrations (feature-gated in src/error.rs)
reqwest = { workspace = true, optional = true }
url = { workspace = true, optional = true }

[dev-dependencies]
# Used by tests in yoshi/src/error.rs (apply_tests module)
tempfile = "3.23.0"
tokio = { workspace = true, features = ["macros", "rt"] }
criterion = "0.8.1"
syn = { version = "2.0", features = ["full"] }
quote = "1.0.42"
thiserror = "2.0.17"
# NOTE: Use the implementation crate for direct invocation
thiserror-impl = "2.0.17"

[[bench]]
name = "perf"
harness = false

[[bin]]
name = "yoshell"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "cargo-yo"
path = "src/bin/cargo-yo.rs"
required-features = ["autofix-cli"]

[features]
# Keep the base crate lean; everything is opt-in.
default = []

# Enable ML-driven recovery strategies (delegates to yoshi-std and turns on tokio).
ml-recovery = [
    "yoshi-std/ml-recovery",
    "dep:tokio",
]

# Enable NATS distributed messaging and worker networking (delegates to yoshi-std).
nats = [
    "yoshi-std/nats",
    "yoshi-std/workers-network",
    "dep:tokio",
    "dep:futures",
]

# Enable URL validation/conversion helpers in YoError.
url = [
    "dep:url",
]

# HTTP gateway / reqwest-based error mappings.
# Now also enables the underlying yoshi-std http-gateway feature.
http-gateway = [
    "dep:reqwest",
    "dep:url",
    "yoshi-std/http-gateway",
]

# Enable Qdrant integration.
qdrant = [
    "xuid/qdrant",
]

# Autofix / cargo integration using Geoshi.
autofix = [
    "dep:geoshi",
    "dep:cargo_metadata",
    "dep:rand",
]

# CLI wrapper for the autofix flow.
autofix-cli = [
    "autofix",
    "dep:clap",
]

# CLI surface that powers the optional binary.
cli = [
    "ml-recovery",
    "dep:clap",
]

# Interactive TUI shell (YoshiShell) with additional visual deps.
# Includes NATS, HTTP Gateway, and ML Recovery (via cli) by default for the full runtime experience.
yoshell = [
    "cli",
    "nats",
    "http-gateway",
    "dep:ratatui",
    "dep:ratatui-image",
    "dep:crossterm",
    "dep:rand",
    "dep:chrono",
    "dep:image",
]

